sandc/test/fixtures/astRegression/shouldSucceed/productions/file/PrivClassesAndInterfaces.sand
pub class PrivClassesAndInterfaces {

}

class PrivClass1 {

}

interface PrivInterface1 {

}

interface PrivInterface2 {

}

class PrivClass2 {

}