sandc/test/fixtures/astRegression/shouldFail/productions/classDeclaration/OpenAbstractClass.sand
pub open abstract class OpenAbstractClass {
    
}